--- a/L2/index.html
+++ b/L2/index.html
@@ -8,7 +8,7 @@
       <script>
         let x = localStorage.getItem('xpos');
         let y = localStorage.getItem('ypos');
-        var isMonsterDead = true;
+        var isMonsterDead = false;
         function setUp() {
           document.getElementById("img").style.left = parseFloat(x);
           document.getElementById("img").style.top = parseFloat(y);
