--- a/index.html
+++ b/index.html
@@ -11,6 +11,48 @@
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
 (function() {
+// player
+const char = document.getElementById('imgEl')
+class player {
+    constructor() {
+        var array = ['https://callmeclover.github.io/WebGame-anim-dev/player/player.00.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.01.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.02.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.03.png'];
+        this.frames = array
+        var cf = 0
+        this.ANIM = function loop(cf) {
+            if (_log == undefined) {
+var _log = console.log;
+console.log = function () {
+    // turn arguments into an array and store it
+    this._last = [].slice.call(arguments);
+
+    // call the original function
+    _log.apply(console, arguments);
+};
+
+console.last = function() {
+    return this._last;
+};
+}
+
+   console.log(setTimeout(() => {
+       char.src = array.at(cf)
+       if (cf == 3) {
+           cf = 0
+       } else {
+            cf = cf + 1
+       }
+       // looooooop
+      loop(cf);
+  }, 350))
+};
+        this.ID = this.ANIM(cf)
+ this.cancel = function cancel() {
+     clearTimeout(console.last())
+ }
+    }
+}
+const playr = new player()
+
 //assorted functions code begin
 function DOMelementOverlapCheck(div1, div2) {
   const domRect1 = div1.getBoundingClientRect();
@@ -40,6 +82,38 @@ var xAxis = 50;
 var yAxis = 10;
 const moveSpeed = 10;
 const div = document.getElementById('img');
+
+// cancel animation
+document.onkeyup = function(event) {
+  switch (event.keyCode) {
+    case 37:
+      if(!SwordCollectCollected)
+      {
+        playr.cancel()
+      }
+    break;
+    case 38:
+      if(!SwordCollectCollected)
+      {
+        playr.cancel()
+      }
+    break;
+    case 39:
+      if(!SwordCollectCollected)
+      {      
+        playr.cancel()
+      }
+    break;
+    case 40:
+      if(!SwordCollectCollected)
+      {
+      playr.cancel()
+      }
+    break;
+  }
+
+};
+// move
 document.onkeydown = function(event) {
   switch (event.keyCode) {
     case 37:
