--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body class = "l1">
-    <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
+<div id="img" style="height:64px;width:64px;position:relative">
+    <img id="imgEl" src="https://callmeclover.github.io/WebGame-anim-dev/player/player.02.png" style="height:64px;width:64px;">
+</div>
     <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
 <script type="text/javascript">
 (function() {
