--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ console.last = function() {
 };
 }
 
-   console.log(setTimeout(() => {
+   setTimeout(() => {
        body.style.backgroundImage = "url(" + arrayBG.at(cf2) + ")"
        if (cf2 == 3) {
            cf2 = 0
@@ -85,7 +85,7 @@ console.last = function() {
        }
        // looooooop
       loop2(cf2);
-  }, 750))
+  }, 750)
 };
         this.ID = this.ANIM(cf2)
  this.cancel = function cancel() {
