--- a/L2/index.html
+++ b/L2/index.html
@@ -8,7 +8,7 @@
       <script>
         let x = localStorage.getItem('xpos');
         let y = localStorage.getItem('ypos');
-        var isMonsterDead = true;
+        var isMonsterDead = false;
         function setUp() {
           document.getElementById("img").style.left = parseFloat(x);
           document.getElementById("img").style.top = parseFloat(y);
@@ -50,7 +50,7 @@
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
                     {
-                      self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      self.location="/Battle/?id=3tv8fh";
                       localStorage.setItem("charHp", "3");
                       localStorage.setItem("nmeHp", "3");
                     } 
@@ -64,7 +64,7 @@
                     div.style.top = yAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
                     {
-                      self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      self.location="/Battle/?id=3tv8fh";
                       localStorage.setItem("charHp", "3");
                       localStorage.setItem("nmeHp", "3");
                     } 
@@ -78,7 +78,7 @@
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
                     {
-                      self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      self.location="/Battle/?id=3tv8fh";
                       localStorage.setItem("charHp", "3");
                       localStorage.setItem("nmeHp", "3");
                     } 
@@ -92,7 +92,7 @@
                     div.style.top = yAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
                     {
-                      self.location="https://minikielbym.github.io/WebGame/Battle/?id=3tv8fh";
+                      self.location="/Battle/?id=3tv8fh";
                       localStorage.setItem("charHp", "3");
                       localStorage.setItem("nmeHp", "3");
                     } 
