--- a/L2/index.html
+++ b/L2/index.html
@@ -87,7 +87,7 @@
                       document.getElementById("imgBeta").style.visibility = 'hidden';
                     } 
                     break;
-                  case 39:
+                  case 39;
                     xAxis += moveSpeed;
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
