--- a/L2/index.html
+++ b/L2/index.html
@@ -12,7 +12,6 @@
           document.getElementById("img").style.left = parseFloat(x);
           document.getElementById("img").style.top = parseFloat(y);
           if(sessionStorage.getItem("3tv8fhwin") === "true")
-          if(localStorage.getItem("3tv8fhwin") === "true" || isMonsterDead === true)
           {
             document.getElementById("nme1").remove();
             document.getElementById("imgBeta").src = "Key-trimmy.png" 
@@ -28,9 +27,6 @@
         <div><img id="imgBeta"/></div>
         <div id="door"><img id="doorimg" src="door.png"></div>
         <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
-        <div><img id="imgBeta"/></div>
-        <div id="img"><img src="char (4) (2).png" id="imgEl"/></div>
-        <div id = "nme1"><img src="3tv8fh-nme.png" id="nme"/></div>
         <script type="text/javascript">
             (function() {
                 function DOMelementOverlapCheck(div1, div2) {
@@ -59,9 +55,6 @@
                       sessionStorage.setItem("charHp", "3");
                       sessionStorage.setItem("nmeHp", "3");
                     }
-                      localStorage.setItem("charHp", "3");
-                      localStorage.setItem("nmeHp", "3");
-                    } 
                     else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
                     {
                       document.getElementById("imgBeta").style.visibility = 'hidden';
@@ -75,19 +68,13 @@
                       self.location="/Battle/?id=3tv8fh";
                       sessionStorage.setItem("charHp", "3");
                       sessionStorage.setItem("nmeHp", "3");
-                      localStorage.setItem("charHp", "3");
-                      localStorage.setItem("nmeHp", "3");
-                    } 
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
                     }
                     else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
                     {
                       document.getElementById("imgBeta").style.visibility = 'hidden';
                     } 
                     break;
-                  case 39;
+                  case 39:
                     xAxis += moveSpeed;
                     div.style.left = xAxis + 'px';
                     if(DOMelementOverlapCheck(nmeDiv, div) === true && isMonsterDead === false)
@@ -95,12 +82,6 @@
                       self.location="/Battle/?id=3tv8fh";
                       sessionStorage.setItem("charHp", "3");
                       sessionStorage.setItem("nmeHp", "3");
-                      localStorage.setItem("charHp", "3");
-                      localStorage.setItem("nmeHp", "3");
-                    } 
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
                     }
                     else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
                     {
@@ -115,12 +96,6 @@
                       self.location="/Battle/?id=3tv8fh";
                       sessionStorage.setItem("charHp", "3");
                       sessionStorage.setItem("nmeHp", "3");
-                      localStorage.setItem("charHp", "3");
-                      localStorage.setItem("nmeHp", "3");
-                    } 
-                    else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
-                    {
-                      document.getElementById("imgBeta").style.visibility = 'hidden';
                     }
                     else if(DOMelementOverlapCheck(document.getElementById("imgBeta"), div))
                     {
