--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
   <meta name="viewport" content="width=device-width" />
   <title>RPG Webgame Testing</title>
   <link href="style.css" rel="stylesheet" type="text/css">
+  <script>
+    var inventory = new Array(21);
+    function nullifyInventory()
+    {
+      var nullCount = 0;
+      while(nullCount < 21)
+      {
+        if(inventory[nullCount] === null)
+        {
+          inventory[nullCount] = "0"
+        }
+        nullCount++;
+      }
+    }
+    function getInventory()
+    {
+      nullifyInventory();
+      var inventoryCounter = 0;
+      while (inventoryCounter < 21)
+      {
+        let invJSON = JSON.parse(sessionStorage.getItem("inventory"));
+        inventory[inventoryCounter] = invJSON.inventoryCounter;
+        console.log(inventory[inventoryCounter]);
+        inventoryCounter++;
+      }
+    }
+  </script>
 </head>
-<body class = "l1">
+<body class = "l1" onload="getInventory">
     <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
     <div id="sword"><div id="hitbox_sword" style="position: relative;bottom: 63px;right:15px;width:27.5px;height: 58.5px;"><img src="swordItem (1).png" id="swordImg"/></div></div>
     <script type="text/javascript">
@@ -20,12 +47,12 @@ function DOMelementOverlapCheck(div1, div2) {
   return !(
     domRect1.top > domRect2.bottom ||
     domRect1.right < domRect2.left ||
-    domRect1.bottom < domRect2.top ||
+    domRect1.bottom < domRect2.top |
     domRect1.left > domRect2.right
   );
 }
 
-//assorted functions code end
+//assorted functions
 
 //assorted variable defenitions code begin
 const SwordCollect = document.getElementById("hitbox_sword")
@@ -34,12 +61,6 @@ var SwordCollectCollected = false
 var wait1 = false;
 var wait2 = false;
 var wait3 = false;
-var inventory = new Array(21);
-var inventoryCounter = 0;
-while (inventoryCounter < 21)
-{
-  JSON.parse(sessionStorage.getItem("inventory"))
-}
 //assorted variable defenitions code end
 
 //player movement code begin
