more nullififififififificationismistsismigism hi

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         }
         nullCount++;
       }
+      sessionStorge.setItem("inventory", JSON.stringify(inventory));
     }
     function getInventory()
     {
