--- a/index.html
+++ b/index.html
@@ -6,12 +6,91 @@
   <title>RPG Webgame Testing</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body class = "l1">
-    <div id="img"><img src="char__3_-removebg-preview (1).png" id="imgEl"/></div>
-    <div id="sword"><div id="hitbox_sword" style="position: relative;bottom: 63px;right:15px;width:27.5px;height: 58.5px;"><img src="swordItem (1).png" id="swordImg"/></div></div>
-    <script type="text/javascript">
+<body class = "l1" id="body">
+<div id="img" style="height:64px;width:64px;position:relative">
+    <img id="imgEl" src="https://callmeclover.github.io/WebGame-anim-dev/player/player.02.png" style="height:64px;width:64px;">
+</div>
+    <div id="sword"><img src="swordItem (1).png" id="swordImg"/></div>
+  <div id="preloaded_resc">
+  <img src="bg.0.png" hidden>
+  <img src="bg.1.png" hidden>
+  <img src="bg.2.png" hidden>
+  <img src="bg.3.png" hidden>
+</div>
+<script type="text/javascript" defer>
 (function() {
-localStorage.removeItem('3tv8fhwin');
+var cf = 0
+// player
+const char = document.getElementById('imgEl')
+const body = document.getElementById('body')
+
+            if (console.last == undefined) {
+var _log = console.log;
+console.log = function () {
+    // turn arguments into an array and store it
+    this._last = [].slice.call(arguments);
+
+    // call the original function
+    _log.apply(console, arguments);
+}
+
+console.last = function() {
+    return this._last;
+}
+}
+
+class player {
+    constructor() {
+        var array = ['https://callmeclover.github.io/WebGame-anim-dev/player/player.00.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.01.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.02.png', 'https://callmeclover.github.io/WebGame-anim-dev/player/player.03.png'];
+        this.frames = array
+        this.ANIM = function loop(cf) {
+
+   console.log(setTimeout(() => {
+       char.src = array.at(cf)
+       if (cf == 3) {
+           cf = 0
+       } else {
+            cf = cf + 1
+       }
+       // looooooop
+      loop(cf);
+  }, 500))
+};
+ this.cancel = function cancel() {
+     clearTimeout(console.last())
+ }
+    }
+}
+
+class bg {
+    constructor() {
+        var arrayBG = ['bg.0.png', 'bg.1.png', 'bg.2.png', 'bg.3.png'];
+        this.frames = arrayBG
+        var cf2 = 0
+        this.ANIM = function loop2(cf2) {
+        
+   setTimeout(() => {
+       body.style.backgroundImage = "url(" + arrayBG.at(cf2) + ")"
+       if (cf2 == 3) {
+           cf2 = 0
+       } else {
+            cf2 = cf2 + 1
+       }
+       // looooooop
+      loop2(cf2);
+  }, 750)
+};
+        this.ID = this.ANIM(cf2)
+ this.cancel = function cancel() {
+     clearTimeout(console.last())
+ }
+    }
+}
+
+var backg = new bg()
+
+const playr = new player()
+
 //assorted functions code begin
 function DOMelementOverlapCheck(div1, div2) {
   const domRect1 = div1.getBoundingClientRect();
@@ -28,12 +107,13 @@ function DOMelementOverlapCheck(div1, div2) {
 //assorted functions code end
 
 //assorted variable defenitions code begin
-const SwordCollect = document.getElementById("hitbox_sword")
+const SwordCollect = document.getElementById("sword")
 const Portal = document.getElementById("LevelTransfer");
 var SwordCollectCollected = false
 var wait1 = false;
 var wait2 = false;
 var wait3 = false;
+  localStorage.setItem("enabled", "true")
 //assorted variable defenitions code end
 
 //player movement code begin
@@ -41,9 +121,23 @@ var xAxis = 50;
 var yAxis = 10;
 const moveSpeed = 10;
 const div = document.getElementById('img');
+
+// cancel animation
+document.onkeyup = function(event) {
+      if (localStorage.getItem('enabled') == "false") {
+      playr.cancel()
+      localStorage.setItem("enabled", "true")
+      }
+};
+
+// move
 document.onkeydown = function(event) {
   switch (event.keyCode) {
     case 37:
+      if (localStorage.getItem('enabled') == "true") {
+        playr.ANIM(0)
+        localStorage.setItem("enabled", "false")
+}
       if(!SwordCollectCollected)
       {
         xAxis -= moveSpeed;
@@ -71,6 +165,10 @@ document.onkeydown = function(event) {
       }
     break;
     case 38:
+      if (localStorage.getItem('enabled') == "true") {
+  playr.ANIM(0)
+      localStorage.setItem("enabled", "false")
+}
       if(!SwordCollectCollected)
       {
         yAxis -= moveSpeed;
@@ -98,6 +196,10 @@ document.onkeydown = function(event) {
       }
     break;
     case 39:
+      if (localStorage.getItem('enabled') == "true") {
+  playr.ANIM(0)
+      localStorage.setItem("enabled", "false")
+}
       if(!SwordCollectCollected)
       {      
         xAxis += moveSpeed;
@@ -125,6 +227,10 @@ document.onkeydown = function(event) {
       }
     break;
     case 40:
+      if (localStorage.getItem('enabled') == "true") {
+  playr.ANIM(0)
+      localStorage.setItem("enabled", "false")
+}
       if(!SwordCollectCollected)
       {
       yAxis += moveSpeed;
@@ -156,6 +262,6 @@ document.onkeydown = function(event) {
 };
 //player movement code end
 })();
-    </script>
+</script>
 </body>
 </html>
