--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       //assorted functions
 
       //assorted variable defenitions code begin
-      const SwordCollect = document.getElementById("sword")
+      const SwordCollect = document.getElementById("hitbox_sword")
       const Portal = document.getElementById("LevelTransfer");
       var SwordCollectCollected = false
       var wait1 = false;
