--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
 
   </style>
   </head>
-<body style="text-align: center;">
+<body id="body" style="text-align: center;">
     <img src="title.png" id="title"/>
+    <br>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
     <p>Press <button>Enter</button> to start.</p>
     <div id="preloaded_resc">
     <img src="https://github.com/Dungeoar/Dungeoar/blob/main/bg.0.png?raw=true" hidden>
@@ -33,7 +40,8 @@
   </div>
  <script>
   const title = document.getElementById('title')
- 
+  const body = document.getElementById('body')
+
   title.animate([
     {
         transform: 'translate(0px, 75px)'
